# vector-tile-lab

./: .env.example  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  docker-compose.yml
.github/workflows/: docker-build.yml
.husky/: pre-commit
client/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  eslint.config.ts  index.html  package-lock.json  package.json  stylelint.config.js
client/src/: App.vue  main.ts
client/src/assets/: main.css
client/src/components/: AttributeSidebar.vue  BaseSidebar.vue  CaptureSidebar.vue  ComparisonSidebar.vue  EmptyState.vue  FileDropzone.vue  FileUploadItem.vue  InfoTooltipLabel.vue  LabeledSelect.vue  LabeledSwitch.vue  LabeledValue.vue  LayerSidebar.vue  MapComponent.vue  MapLegend.vue  MetadataSectionCard.vue  MetadataSidebar.vue  PerformanceSidebar.vue  StyleSidebar.vue  TilesetSidebar.vue  TuneSidebar.vue  TweakSidebar.vue  UploadSidebar.vue
client/src/composables/: useApi.ts  useDatasetQuery.ts  useExportSettings.ts  useLayerStyles.ts  useProgress.ts  useSelectedData.ts  useTheme.ts  useTierListQuery.ts  useTilesetQuery.ts
martin/: config.yaml
server/: .dockerignore  .env.example  .gitignore  Dockerfile  pyproject.toml  schema.yaml
server/lab/: apps.py  constants.py  filters.py  models.py  serializers.py  signals.py  tasks.py  urls.py  utils.py  views.py
server/lab/migrations/: 0001_initial.py  0002_dataset_cpg_file_dataset_dbf_file_dataset_prj_file_and_more.py  0003_tierlist.py  0004_alter_tierlist_method.py
server/server/: celery.py  settings.py  urls.py
(+46 files in other folders)
